git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "b894ae7"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "b894ae7"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/perl6/doc/doc/Language/5to6-perlvar.pod
+++ b/perl6/doc/doc/Language/5to6-perlvar.pod
@@ -424,8 +424,8 @@ filehandle. E. g. C<$*IN.ins>.
 
 =item $/
 
-This is accessed through the C<.nl> method on the filehandle. E. g.
-C<$*IN.nl>.
+This is accessed through the C<.nl-in> method on the filehandle. E. g.
+C<$*IN.nl-in>.
 
 =item $OUTPUT_RECORD_SEPARATOR
 
@@ -433,9 +433,8 @@ C<$*IN.nl>.
 
 =item $\
 
-[NEEDS FURTHER RESEARCH] The <.nl> method on the filehandle (e. g.
-C<$*OUT.nl>) I<appears> to give the output record separator, but this is
-currently not clear.
+This is accessed through the C<.nl-out> method on the filehandle. E. g.
+C<$*OUT.nl-out>.
 
 =item $OUTPUT_AUTOFLUSH
 
