--- a/perl6/doc/doc/Language/concurrency.pod
+++ b/perl6/doc/doc/Language/concurrency.pod
@@ -279,9 +279,9 @@ is an integer starting at 0 that is incremented for each event. The
 following code outputs 0 .. 5 :
 
 
-	my $supply = Supply.interval(2);
-	$supply.tap(-> $v { say $v });
-	sleep 10;
+    my $supply = Supply.interval(2);
+    $supply.tap(-> $v { say $v });
+    sleep 10;
 
 This could also be written using the C<react> keyword:
 
@@ -418,20 +418,14 @@ The L<method closed|/type/Channel#method_closed> returns a L<Promise> that
 will be kept (and consequently will evaluate to True in a boolean context,)
 when the channel is closed.
 
-Because looping over a channel in this manner is a common pattern there is
-a simpler functional syntax to do this:
+Channels can be used in place of the L<Supply> in the C<whenever> of a
+C<react> block described earlier:
 
     my $channel = Channel.new;
-
     my $p = start {
-        loop {
-            earliest $channel {
-                more * {
-                    say $_;
-                }
-                done * {
-                    last;
-                }
+        react {
+            whenever $channel {
+                say $_;
             }
         }
     }
@@ -446,36 +440,18 @@ a simpler functional syntax to do this:
     $channel.close;
     await $p;
 
-C<earliest> takes one or more channels and for the first one which has
-an item available it will be passed to the C<more> block that matches
-the channel, or to the "wildcard" block if there isn't a specific
-match. Similarly, if any channel is found to be closed then control
-is passed to the matching ( or wildcard ) C<done> block, the statement
-will return the value of the called block. Typically C<earliest> will
-be called in a loop with some control to exit the loop when one or more
-of the channels is closed as in the above example.
-
 It is also possible to obtain a L<Channel> from a L<Supply> using the
 L<Supply method|/type/Supply#method_Channel> which returns a L<Channel>
 which is fed by a C<tap> on the L<Supply>:
 
-    my $supply  = Supply.new;
+    my $supplier = Supplier.new;
+    my $supply   = $supplier.Supply;
     my $channel = $supply.Channel;
 
-    my @channels;
-    @channels.push($channel);
-
-    $supply.tap(-> $v {say "via Supply : $v" });
-
     my $p = start {
-        loop {
-            earliest @channels {
-                more * -> $item {
-                    say "via Channel: $item";
-                }
-                done * {
-                    last;
-                }
+        react  {
+            whenever $channel -> $item {
+                say "via Channel: $item";
             }
         }
     }
@@ -483,11 +459,11 @@ which is fed by a C<tap> on the L<Supply>:
     await (^10).map: -> $r {
         start {
             sleep $r;
-            $supply.emit($r);
+            $supplier.emit($r);
         }
     }
 
-    $supply.done;
+    $supplier.done;
     await $p;
 
 C<Channel> will return a different L<Channel> fed with the same data
