--- a/perl6/doc/doc/Language/classtut.pod
+++ b/perl6/doc/doc/Language/classtut.pod
@@ -587,9 +587,9 @@ problems with dumping cyclic data structures this way, but they are expected
 to be handled correctly by C<.perl> at some point.>, it is very useful for
 debugging simple objects.
 
-C<$o.^methods(:local)> produces a list of methods that can be called on
-C<$o>. The C<:local> named argument limits the returned methods to those
-defined in the C<Employee> class and excludes the inherited methods.
+C<$o.^methods(:local)> produces a list of L<Method|/type/Method>s that can be
+called on C<$o>. The C<:local> named argument limits the returned methods to
+those defined in the C<Employee> class and excludes the inherited methods.
 
 The syntax of calling a method with C<.^> instead of a single dot means that
 it is actually a method call on the I<meta class>, which is a class managing
