--- a/perl6/doc/doc/Language/io.pod
+++ b/perl6/doc/doc/Language/io.pod
@@ -35,7 +35,7 @@ the file for you.
 =head2 Line by line
 
 Of course, we also have the option to read a file line-by-line. The new line
-separator (e.g. $*IN.nl) will be excluded.
+separator (e.g. $*IN.nl-in) will be excluded.
 
     for 'huge-csv'.IO.lines -> $line {
         # Do something with $line
