--- a/perl6/doc/doc/Language/operators.pod
+++ b/perl6/doc/doc/Language/operators.pod
@@ -281,6 +281,17 @@ L<List> is returned.
 
 Technically this is not an operator, but syntax special-cased in the compiler.
 
+=head2 postfix C<».> / postfix C«>>.»
+
+Hyper method call operator will call a method on all elements of a C<List> out of order and return the list of return values in order.
+
+    my @a = <a b c>;
+    @a».say;                          # a␤b␤c␤
+    my @b = @a».ord;                  # [97, 98, 99]
+    sub foo(Str:D $c){ $c.ord * 2 };  # The first parameter of a method is the invocant.
+    say @a».&foo;                     # So we can pretend to have a method call with a sub that got a good first positional argument.
+    say @a».&({ .ord});               # Blocks have an implicit positional arguments that lands in $_. The latter can be obmitted for method calls.
+
 =head2 X«postfix C<.postfix>
     |postfix,.postfix;postcircumfix,.( );postcircumfix,.[ ];postcircumfix,.{ };postcircumfix,.< >»
 
