--- a/perl6/doc/doc/Language/syntax.pod
+++ b/perl6/doc/doc/Language/syntax.pod
@@ -231,6 +231,20 @@ variables:
     #   ^^^ type name
 
 
+=head2 Packages and Qualified Names
+
+Named entities, such as variables, constants, classes, modules, subs, etc, are
+part of a namespace. Nested parts of a name use C<::> to separate the
+heirarchy. Some examples:
+
+    $foo                # simple identifiers
+    $Foo::Bar::baz      # compound identifiers separated by ::
+    $Foo::($bar)::baz   # compound identifiers that perform interpolations
+    Foo::Bar::bob(23)   # function invocation given qualified name
+
+See the L<documentaton on packages|/language/packages> for more details.
+
+
 =head2 Literals
 
 A L<literal|https://en.wikipedia.org/wiki/Literal_%28computer_programming%29>
