--- a/perl6/doc/doc/Language/testing.pod
+++ b/perl6/doc/doc/Language/testing.pod
@@ -212,12 +212,16 @@ strings, such as C<'=='> or C<'~~'>.
 
 =item like($obtained, $expected-regex, $description?)
 
+    like 'foo', /fo/, 'foo looks like fo';
+
 Marks a test as passed if the C<$obtained> C<Str> matches the
 C<$expected-regex>.  The function accepts an optional C<$description> of the
 test.  The regex to match can be either a pre-declared C<Regex> object or
 defined directly in the argument to C<like>.
 
 =item unlike($obtained, $expected-regex, $description?)
+
+    unlike 'foo', /bar/, 'foo does not look like bar';
 
 Marks a test as failed if the C<$obtained> C<Str> matches the
 C<$expected-regex>.  The function accepts an optional C<$description> of the
@@ -264,6 +268,14 @@ C<$description> of the test.
 
     my $eulers-constant-approx = 2.71828;
     is-approx($eulers-constant-approx, e, "approximate Euler's constant");
+
+=head2 Module loading testing
+
+=item use-ok($module)
+
+Marks a test as passed if the given C<$module> is correctly loaded.
+
+    use-ok('Full::Qualified::ModuleName');
 
 =head2 Class membership testing
 
