--- a/perl6/doc/doc/Language/traps.pod
+++ b/perl6/doc/doc/Language/traps.pod
@@ -220,6 +220,24 @@ which is equivalent to
 
 Here, C<tc> means "title case".
 
+=head2 Strings are not iterable
+
+There are methods that Str inherits from Any that work on iterables like lists. Interators on Strings contain one element that is the whole string. To use C<sort>, C<reverse> and friends, you need to split the string into a list first.
+
+    say "abc".reverse;              #   abc (what is wrong)
+    say "abc".comb.reverse.join;    #   cba
+
+=head1 Adverbs and Precedence
+
+Adverbs do have a precedence that may not follow the order of operators that is displayed on your screen. If two operators of equal precedence are followed by an adverb it will pick the first operator it find in the abstract syntax tree. Use paranteses to help Perl 6 to understand what you mean or use operators with looser precedence.
+
+    my %x = a => 42; 
+    say !%x<b>:exists;            # dies with X::AdHoc
+    say %x<b>:!exists;            # this works
+    say !(%x<b>:exists);          # works too
+    say not %x<b>:exists;         # works as well
+    say True unless %x<b>:exists; # avoid negation altogether
+    
 =end pod
 
 # vim: expandtab shiftwidth=4 ft=perl6
