--- a/perl6/doc/doc/Type/Any.pod
+++ b/perl6/doc/doc/Type/Any.pod
@@ -98,8 +98,41 @@ C<none>-L<Junction|/type/Junction> from it.
 
 Interprets the invocant as a list, and returns that L<List|/type/List>.
 
-    say so 42.list.^name;           # List
-    say so 42.list.elems;           # 1
+    say 42.list.^name;           # List
+    say 42.list.elems;           # 1
+
+=head2 routine reverse
+
+Defined as:
+
+    multi sub    reverse(*@list ) returns List:D
+    multi method reverse(List:D:) returns List:D
+
+Usage:
+
+    reverse(LIST)
+    LIST.reverse
+
+Returns a list with the same elements in reverse order.
+
+Note that C<reverse> always refers to reversing elements of a list;
+to reverse the characters in a string, use L<flip>.
+
+Examples:
+
+    say <hello world!>.reverse      #  world! hello
+    say reverse ^10                 # 9 8 7 6 5 4 3 2 1 0
+
+=head2 method sort
+
+Sorts iterables with C<infix:<cmp>> or given code object.
+
+Examples:
+
+    say <b c a>.sort;                           # a b c
+    say 'bca'.comb.sort.join;                   # abc
+    say 'bca'.comb.sort({$^b cmp $^a}).join;    # cba
+    say '231'.comb.sort(&infix:«<=>»).join;     # 123
 
 =head2 method flat
 
