--- a/perl6/doc/doc/Type/IO/Handle.pod
+++ b/perl6/doc/doc/Type/IO/Handle.pod
@@ -36,7 +36,7 @@ Returns L<Bool::True> if the read operations have exhausted the content of the f
     method lines($limit = Inf)
 
 Return a lazy list of the file's lines read via L<get>, limited to C<$limit> lines.
-The new line separator (e.g. $*IN.nl) will be excluded.
+The new line separator (e.g. $*IN.nl-in) will be excluded.
 
     =for code :allow<B>
     my @data;
@@ -161,6 +161,12 @@ reading.
 Will close a previously opened filehandle.
 
     $fh.close;
+
+=head2 method flush
+
+Will flush the filehandle to disk.
+
+    $fh.flush;
 
 =head1 Related roles and classes
 
