--- a/perl6/doc/doc/Type/IO/Path.pod
+++ b/perl6/doc/doc/Type/IO/Path.pod
@@ -180,6 +180,19 @@ An example program that lists all files and directories recursively:
         }
     }
 
+A lazy way to find the first three files ending in ".p6" recursively starting from the current directory:
+
+    my @stack = '.';
+    my $perl-files := gather while ( @stack ) {
+        my $current = @stack.pop;
+        take $current if ($current.IO.f && $current.IO.extension ~~ rx:i/p6$/);
+        @stack.append(dir($current)>>.path) if $current.IO.d;
+    }
+    
+    
+    say $perl-files[1..3];
+
+
 =head2 routine chdir
 
     sub chdir(Str() $path, :$test = 'r' --> IO::Path);
