--- a/perl6/doc/doc/Type/Routine.pod
+++ b/perl6/doc/doc/Type/Routine.pod
@@ -172,6 +172,8 @@ say double 21;      # 42
 From inside another file you'd say C<use Foo;> to load a module and import the
 exported functions.
 
+See L</language/modules#Exporting and Selective Importing> for more details.
+
 =head2 trait is DEPRECATED
 
     multi sub trait_mod:<is>(Routine:D $r, :$DEPRECATED!)
