--- a/perl6/doc/doc/Type/X/Proc/Async/TapBeforeSpawn.pod
+++ b/perl6/doc/doc/Type/X/Proc/Async/TapBeforeSpawn.pod
@@ -2,7 +2,7 @@
 
 =TITLE class X::Proc::Async::TapBeforeSpawn
 
-=SUBTITLE Error due to tapping a Proc::Async stream before spawning its process
+=SUBTITLE Error due to tapping a Proc::Async stream after spawning its process
 
     class X::Proc::Async::TapBeforeSpawn is Exception { ... }
 
