git subrepo clone --force git://github.com/p6-pdf/perl6-Font-AFM.git p6-pdf/perl6-Font-AFM
subrepo:
  subdir:   "p6-pdf/perl6-Font-AFM"
  merged:   "c943102"
upstream:
  origin:   "git://github.com/p6-pdf/perl6-Font-AFM.git"
  branch:   "master"
  commit:   "c943102"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/p6-pdf/perl6-Font-AFM/Changes
+++ b/p6-pdf/perl6-Font-AFM/Changes
@@ -1,3 +1,6 @@
+   Release 1.23.3
+   Fixed `provides` paths in META.info
+
    Release 1.23.2
    Fixed for latest rakudo
    - a multi submethod BUILD can no longer be directly inherited. Changed
