--- a/perl6/doc/doc/Language/mop.pod
+++ b/perl6/doc/doc/Language/mop.pod
@@ -140,6 +140,11 @@ has a primitive, class-like kind called C<knowhow>, which is used to
 bootstrap its own classes and roles implementation. C<knowhow> is built on
 primitives that the virtual machine under NQP provides.
 
+Since the object model is bootstrapped in terms of lower-level types,
+introspection can sometimes return low-level types instead of the ones you
+expect, like a NQP-level routine instead of normal L<Routine|/type/Routine>
+object, or a bootstrap-attribute instead of L<Attribute|/type/Attribute>.
+
 =head2 Composition time and static reasoning
 
 In Perl 6, a type is constructed as it is parsed, so in the beginning, it must
@@ -174,5 +179,24 @@ the VM can lead to all sorts of strange behaviors that, in normal code, would
 obviously be bugs.
 
 So be extra careful and thoughtful when writing meta types.
+
+=head2 Power, Convenience and Pitfalls
+
+The meta object protocol is designed to be powerful enough to implement the
+Perl 6 object system. This power occasionally comes at the cost of convenience.
+
+For example, when you write C<my $x = 42> and then proceed to call methods on
+C<$x>, most of these methods end up acting on the L<integer|/type/Int> 42, not
+on the L<scalar container|/type/Scalar> in which it is stored. This is a piece
+of convenience found in ordinary Perl 6. Many parts of the meta object
+protocol cannot afford to offer the convenience of automatically ignoring
+scalar containers, because they are used to implement those scalar containers
+as well. So if you write C<my $t = MyType; ... ; $t.^compose> you are
+composing the Scalar that the C<$>-sigiled variable implies, not C<MyType>.
+
+The consequence is that you need to have a rather detailed understanding of
+the subleties of Perl 6 in order to avoid pitfalls when working with the MOP,
+and can't expect the same "do what I mean" convenience that ordinary Perl 6
+code offers.
 
 =end pod
