--- a/perl6/doc/doc/Type/IO/Socket.pod
+++ b/perl6/doc/doc/Type/IO/Socket.pod
@@ -56,4 +56,12 @@ Closes the socket.
 
 Fails if the socket is not connected.
 
+=head2 method native-descriptor
+
+    method native-descriptor()
+
+This returns a value that the operating system would understand as a "socket descriptor" and
+is suitable for passing to a native function that requires a socket descriptor as an
+argument such as C<setsockopt>.
+
 =end pod
