git subrepo clone --force git://github.com/moritz/json.git moritz/json
subrepo:
  subdir:   "moritz/json"
  merged:   "9888329"
upstream:
  origin:   "git://github.com/moritz/json.git"
  branch:   "master"
  commit:   "9888329"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/moritz/json/README
+++ b/moritz/json/README
@@ -4,6 +4,9 @@ A simple Perl 6 module for serializing and deserializing JSON.
   say from-json('{ "a": 42 }').perl;
   say to-json { a => [1, 2, 'b'] };
 
+JSON::Tiny implements RFC7159, which is a superset of ECMA-404, in that it
+permits any value as a top-level JSON string, not just arrays and objects.
+
 All files (unless noted otherwise) can be used, modified and redistributed
 under the terms of the Artistic License Version 2. Examples (in the
 documentation, in tests or distributed as separate files) can be considered
